--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.blitz</groupId>
-	<artifactId>whatsdown</artifactId>
+	<artifactId>imbus</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>whatsdown</name>
+	<name>imbus</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
