--- a/backend/src/main/resources/template.application.properties
+++ b/backend/src/main/resources/template.application.properties
@@ -1,9 +1,33 @@
+# ---------------------------
+# Application Configuration
+# ---------------------------
 spring.application.name=imbus
 
-config.SECRET_KEY=
+# ---------------------------
+# JWT Configuration
+# ---------------------------
+config.SECRET_KEY=JWT_SECRET_KEY
 
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# ---------------------------
+# DataSource Configuration
+# ---------------------------
+spring.datasource.url=jdbc:mysql://DB_URL:PORT/imbus
+spring.datasource.username=DB_USER
+spring.datasource.password=DB_PASSWORD
+
+# ---------------------------
+# Flyway Configuration
+# ---------------------------
+spring.flyway.url=jdbc:mysql://DB_URL:PORT/imbus
+spring.flyway.user=DB_USER
+spring.flyway.password=DB_PASSWORD
+spring.flyway.locations=classpath:/db/migration
+spring.flyway.enabled=true
+
+# ---------------------------
+# JPA/Hibernate Configuration
+# ---------------------------
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
