--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-star-rating": "^1.1.0"
   },
