--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.73.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-star-rating": "^1.1.0"
+    "react-native-star-rating": "^1.1.0",
+    "react-native-svg": "^15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
