--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-picker": "^7.1.2",
+    "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^15.2.0",
