--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -102,6 +102,11 @@
 			<version>3.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.12.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
