--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -107,6 +107,13 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.12.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
