--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -116,6 +116,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>imbus</finalName>
 	</build>
 
 </project>
