--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
-version: '3.8'
+version: '3.7'
 
-networks:
-  imbus-network:
-    external: true
-    
 services:
+
   mysqldb:
     image: mysql:8.0.31
     restart: always
@@ -16,18 +13,24 @@ services:
     ports:
       - '3306:3306'
     volumes:
-      - db:/var/lib/mysql
+      - mysql-data:/var/lib/mysql
     networks:
       - imbus-network
-
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      retries: 10
+      interval: 3s
+      timeout: 30s
 
   app:
-    depends_on:
-      - mysqldb
-    build: ./backend
-    restart: on-failure
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
+    depends_on:
+      mysqldb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url" : "jdbc:mysql://mysqldb:3306/imbus?useSSL=false",
@@ -36,12 +39,12 @@ services:
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
-    volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
     networks:
       - imbus-network
 
 volumes:
-  db:
+  mysql-data:
+
+networks:
+  imbus-network:
+    name: imbus-network
