--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -47,3 +47,5 @@ spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.enabled=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.port=${PORT:8080}
