Converted to typescript and error fixes

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Imbus",
-    "slug": "Imbus",
+    "name": "imbus",
+    "slug": "imbus",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,7 +22,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.leostricak22.Imbus"
+      "package": "com.leostricak22.imbus"
     },
     "web": {
       "favicon": "./assets/favicon.png"
