Frontend structure refactor + environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ frontend/.env*.local
 frontend/*.tsbuildinfo
 backend/src/main/resources/application.properties
 backend/src/main/resources/application-local.properties
+frontend/.env
