--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,15 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "expo": "^51.0.9",
     "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-picker-select": "^9.1.3",
@@ -34,7 +38,8 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^15.2.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-typescript-transformer": "^1.2.13"
+    "react-native-typescript-transformer": "^1.2.13",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
