--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@stomp/stompjs": "^7.0.0",
     "@types/react": "~18.2.79",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
@@ -32,6 +33,7 @@
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-event-source": "^1.1.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "4.10.1",
@@ -39,12 +41,16 @@
     "react-native-svg": "^15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-typescript-transformer": "^1.2.13",
+    "react-native-websocket": "^1.0.2",
+    "sockjs-client": "^1.6.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@types/react-native-star-rating": "^1.1.6"
+    "@types/react-native-event-source": "^1.1.2",
+    "@types/react-native-star-rating": "^1.1.6",
+    "@types/sockjs-client": "^1.5.4"
   },
   "private": true
 }
