--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "http-proxy-middleware": "^3.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-calendars": "^1.1305.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-event-source": "^1.1.0",
