--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-native-svg": "^15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-typescript-transformer": "^1.2.13",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-websocket": "^1.0.2",
     "sockjs-client": "^1.6.1",
     "zod": "^3.23.8"
